--- a/sandbox.ipynb
+++ b/sandbox.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "7bb95930-dfa1-4285-8819-31e2141dc003",
+   "execution_count": null,
+   "id": "2f729d41-47b3-49e6-86bf-456c7df03056",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
     "try:\n",
     "    import sklearn as sk\n",
     "except ModuleNotFoundError:\n",
@@ -21,12 +20,28 @@
     "import matplotlib.pyplot as plt \n",
     "import sklearn as sk\n",
     "\n",
-    "root_dir = %pwd\n"
+    "root_dir = %pwd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 18,
+   "id": "76e0b479-4c70-42f4-9955-e26cf2023b73",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def print_category_counts(df, col):\n",
+    "    print(col, \"counts:\")\n",
+    "    for c in df[col].unique():\n",
+    "        count = (df[col] == c).sum()\n",
+    "        part = count / len(df)\n",
+    "        print(f\"{c:>10s}: {count} ({part:2.1%})\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
    "id": "f660e328-f613-40ed-add1-00dfec884792",
    "metadata": {},
    "outputs": [
@@ -34,7 +49,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DataFarame size (101766, 50)\n"
+      "DataFarame size (101766, 50)\n",
+      "readmitted counts:\n",
+      "        NO: 54864 (53.9%)\n",
+      "       >30: 35545 (34.9%)\n",
+      "       <30: 11357 (11.2%)\n"
      ]
     },
     {
@@ -246,7 +265,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,12 +273,13 @@
    "source": [
     "df = pd.read_csv(root_dir + \"/data/diabetes-130-us/diabetic_data.csv\", na_values=\"?\", dtype={'payer_code': str})\n",
     "print(\"DataFarame size\", df.shape)\n",
+    "print_category_counts(df, \"readmitted\")\n",
     "df.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "id": "da7d7bcc-7fd6-4d16-b34b-d671acd8c98a",
    "metadata": {},
    "outputs": [
